# mat_fusion

./: .gitignore  README.md  explore_dataset.py  main.py  pyproject.toml
arctic_sea_ice_data_fusion/: dataset.py  evaluate.py  inference.py  model.py  preprocess.py  train.py  visualize.py
assets/: result.mat  sea_ice_dataset_withoutint.mat
logs/: evaluation_results.txt  training_results.txt
