[project]
name = "arctic-sea-ice-data-fusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "h5py>=3.14.0",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
